--- a/index.html
+++ b/index.html
@@ -55,14 +55,10 @@
     <button id="btn-export">Export to JSON</button>
     <textarea id="json-data" placeholder="Paste JSON here or click Export"></textarea>
     <button id="btn-import">Import from JSON</button>
-    <button id="layout-left">Left</button>
-    <button id="layout-right">Right</button>
-    <button id="layout-standard">Standard</button>
-    <select id="theme-select" style="margin-left: 10px; padding: 5px;">
-      <option value="default">Default Theme</option>
-      <option value="simple">Simple Theme</option>
-      <option value="colorful">Colorful Theme</option>
-    </select>
+    <button id="layout-left" style="display:none">Left</button>
+    <button id="layout-right" style="display:none">Right</button>
+    <button id="layout-standard" style="display:none">Standard</button>
+    <!-- Theme select removed, moved to StyleSwitcher UI -->
   </div>
   <div id="mindmap-container"></div>
   <script type="module">
@@ -98,10 +94,7 @@
         kakidash.updateLayout('Standard');
       });
 
-      const themeSelect = document.getElementById('theme-select');
-      themeSelect.addEventListener('change', (e) => {
-        kakidash.setTheme(e.target.value);
-      });
+
 
       document.getElementById('btn-export').addEventListener('click', () => {
         const data = board.getData();
