--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       style="display: flex; gap: 5px; align-items: center; border-left: 1px solid #999; padding-left: 10px; margin-left: 10px;">
       <label>Shortcuts (JSON):</label>
       <textarea id="shortcuts-input" style="width: 200px; height: 30px; vertical-align: middle;"
-        placeholder='{"addChild": [...]}'></textarea>
+        placeholder='{"addChild": [...]}'>{"addChild": [{ "key": "m" }]}</textarea>
       <button id="btn-reload-shortcuts">Reload</button>
     </div>
   </div>
