--- a/style_demo.html
+++ b/style_demo.html
@@ -47,6 +47,7 @@
         <div style="flex-basis: 100%; height: 0;"></div> <!-- Break row -->
         <button onclick="changeRootBorder()">Change Root Border</button>
         <button onclick="changeChildBorder()">Change Child Border</button>
+        <button onclick="changeFontColor()">Change Font Color</button>
         <button onclick="enableTransparentMode()">Transparent Mode (Custom)</button>
         <button onclick="addRandomNode()">Add Node</button>
     </div>
@@ -97,13 +98,15 @@
         };
 
         window.resetStyles = () => {
-            console.log('Resetting styles');
+            console.log('Resetting styles (Clearing saved custom styles)');
             kakidash.updateGlobalStyles({
-                rootNode: { border: '', background: '' },
-                childNode: { border: '', background: '' },
-                connection: { color: '' }
+                rootNode: { border: '', background: '', color: '' },
+                childNode: { border: '', background: '', color: '' },
+                connection: { color: '' },
+                canvas: { background: '' }
             });
-            container.style.backgroundColor = '#fafafa';
+            // If we are in custom mode, this clears the view.
+            // If we are not, it clears the saved config.
         };
 
         window.changeRootBorder = () => {
@@ -139,6 +142,15 @@
             document.body.style.backgroundImage = 'linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee), linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee)';
             document.body.style.backgroundSize = '20px 20px';
             document.body.style.backgroundPosition = '0 0, 10px 10px';
+        };
+
+        window.changeFontColor = () => {
+            console.log('Changing Font Color');
+            kakidash.updateGlobalStyles({
+                rootNode: { color: 'red', border: '2px solid red' },
+                childNode: { color: 'blue', border: '1px solid blue' },
+                connection: { color: 'purple' }
+            });
         };
 
         window.addRandomNode = () => {
